@@ -1344,7 +1344,8 @@ AUIDLL_OBJECTS =  \
 	$(OBJS)\auidll_auibook.obj \
 	$(OBJS)\auidll_auibar.obj \
 	$(OBJS)\auidll_tabmdi.obj \
-	$(OBJS)\auidll_tabart.obj
+	$(OBJS)\auidll_tabart.obj \
+	$(OBJS)\auidll_xh_auinotbk.obj
 AUILIB_CXXFLAGS = $(__RUNTIME_LIBS) -I$(BCCDIR)\include $(__DEBUGINFO) \
 	$(__OPTIMIZEFLAG) $(__THREADSFLAG) -D__WXMSW__ $(__WXUNIV_DEFINE_p) \
 	$(__DEBUG_DEFINE_p) $(__NDEBUG_DEFINE_p) $(__EXCEPTIONS_DEFINE_p) \
@@ -1362,7 +1363,8 @@ AUILIB_OBJECTS =  \
 	$(OBJS)\auilib_auibook.obj \
 	$(OBJS)\auilib_auibar.obj \
 	$(OBJS)\auilib_tabmdi.obj \
-	$(OBJS)\auilib_tabart.obj
+	$(OBJS)\auilib_tabart.obj \
+	$(OBJS)\auilib_xh_auinotbk.obj
 RIBBONDLL_CXXFLAGS = $(__RUNTIME_LIBS) -I$(BCCDIR)\include $(__DEBUGINFO) \
 	$(__OPTIMIZEFLAG) $(__THREADSFLAG) -D__WXMSW__ $(__WXUNIV_DEFINE_p) \
 	$(__DEBUG_DEFINE_p) $(__NDEBUG_DEFINE_p) $(__EXCEPTIONS_DEFINE_p) \
@@ -1722,6 +1724,7 @@ ____MONOLIB_GUI_SRC_FILENAMES_OBJECTS =  \
 	$(OBJS)\monodll_auibar.obj \
 	$(OBJS)\monodll_tabmdi.obj \
 	$(OBJS)\monodll_tabart.obj \
+	$(OBJS)\monodll_xh_auinotbk.obj \
 	$(OBJS)\monodll_advprops.obj \
 	$(OBJS)\monodll_editors.obj \
 	$(OBJS)\monodll_manager.obj \
@@ -2520,6 +2523,7 @@ ____MONOLIB_GUI_SRC_FILENAMES_1_OBJECTS =  \
 	$(OBJS)\monolib_auibar.obj \
 	$(OBJS)\monolib_tabmdi.obj \
 	$(OBJS)\monolib_tabart.obj \
+	$(OBJS)\monolib_xh_auinotbk.obj \
 	$(OBJS)\monolib_advprops.obj \
 	$(OBJS)\monolib_editors.obj \
 	$(OBJS)\monolib_manager.obj \
@@ -7214,6 +7218,9 @@ $(OBJS)\monodll_tabmdi.obj: ..\..\src\aui\tabmdi.cpp
 $(OBJS)\monodll_tabart.obj: ..\..\src\aui\tabart.cpp
 	$(CXX) -q -c -P -o$@ $(MONODLL_CXXFLAGS) ..\..\src\aui\tabart.cpp
 
+$(OBJS)\monodll_xh_auinotbk.obj: ..\..\src\xrc\xh_auinotbk.cpp
+	$(CXX) -q -c -P -o$@ $(MONODLL_CXXFLAGS) ..\..\src\xrc\xh_auinotbk.cpp
+
 $(OBJS)\monodll_advprops.obj: ..\..\src\propgrid\advprops.cpp
 	$(CXX) -q -c -P -o$@ $(MONODLL_CXXFLAGS) ..\..\src\propgrid\advprops.cpp
 
@@ -9657,6 +9664,9 @@ $(OBJS)\monolib_tabmdi.obj: ..\..\src\aui\tabmdi.cpp
 
 $(OBJS)\monolib_tabart.obj: ..\..\src\aui\tabart.cpp
 	$(CXX) -q -c -P -o$@ $(MONOLIB_CXXFLAGS) ..\..\src\aui\tabart.cpp
+
+$(OBJS)\monolib_xh_auinotbk.obj: ..\..\src\xrc\xh_auinotbk.cpp
+	$(CXX) -q -c -P -o$@ $(MONOLIB_CXXFLAGS) ..\..\src\xrc\xh_auinotbk.cpp
 
 $(OBJS)\monolib_advprops.obj: ..\..\src\propgrid\advprops.cpp
 	$(CXX) -q -c -P -o$@ $(MONOLIB_CXXFLAGS) ..\..\src\propgrid\advprops.cpp
@@ -15707,6 +15717,9 @@ $(OBJS)\auidll_tabmdi.obj: ..\..\src\aui\tabmdi.cpp
 $(OBJS)\auidll_tabart.obj: ..\..\src\aui\tabart.cpp
 	$(CXX) -q -c -P -o$@ $(AUIDLL_CXXFLAGS) ..\..\src\aui\tabart.cpp
 
+$(OBJS)\auidll_xh_auinotbk.obj: ..\..\src\xrc\xh_auinotbk.cpp
+	$(CXX) -q -c -P -o$@ $(AUIDLL_CXXFLAGS) ..\..\src\xrc\xh_auinotbk.cpp
+
 $(OBJS)\auilib_dummy.obj: ..\..\src\common\dummy.cpp
 	$(CXX) -q -c -P -o$@ $(AUILIB_CXXFLAGS) -H ..\..\src\common\dummy.cpp
 
@@ -15730,6 +15743,9 @@ $(OBJS)\auilib_tabmdi.obj: ..\..\src\aui\tabmdi.cpp
 
 $(OBJS)\auilib_tabart.obj: ..\..\src\aui\tabart.cpp
 	$(CXX) -q -c -P -o$@ $(AUILIB_CXXFLAGS) ..\..\src\aui\tabart.cpp
+
+$(OBJS)\auilib_xh_auinotbk.obj: ..\..\src\xrc\xh_auinotbk.cpp
+	$(CXX) -q -c -P -o$@ $(AUILIB_CXXFLAGS) ..\..\src\xrc\xh_auinotbk.cpp
 
 $(OBJS)\ribbondll_dummy.obj: ..\..\src\common\dummy.cpp
 	$(CXX) -q -c -P -o$@ $(RIBBONDLL_CXXFLAGS) -H ..\..\src\common\dummy.cpp
