@@ -795,6 +795,9 @@
 			<File
 				RelativePath="..\..\include\wx\aui\tabmdi.h">
 			</File>
+			<File
+				RelativePath="..\..\include\wx\xrc\xh_auinotbk.h">
+			</File>
 		</Filter>
 		<Filter
 			Name="Source Files"
@@ -820,6 +823,9 @@
 			</File>
 			<File
 				RelativePath="..\..\src\aui\tabmdi.cpp">
+			</File>
+			<File
+				RelativePath="..\..\src\xrc\xh_auinotbk.cpp">
 			</File>
 		</Filter>
 	</Files>
