@@ -1078,6 +1078,10 @@
 				RelativePath="..\..\include\wx\aui\tabmdi.h"
 				>
 			</File>
+			<File
+				RelativePath="..\..\include\wx\xrc\xh_auinotbk.h"
+				>
+			</File>
 		</Filter>
 		<Filter
 			Name="Source Files"
@@ -1110,6 +1114,10 @@
 			</File>
 			<File
 				RelativePath="..\..\src\aui\tabmdi.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\src\xrc\xh_auinotbk.cpp"
 				>
 			</File>
 		</Filter>
